# thermo-raw-file-streamer

./: Cargo.toml  README.md  README_MATHNET_THIRD-PARTY-LICENSE.txt  README_THERMO_THIRD-PARTY-LICENSE.txt  build.rs
resources/bindings/: ThermoRawFileParser.c  ThermoRawFileParser.h  mono_embeddinator.c  mscorlib.c  mscorlib.h
resources/lib/: ThermoRawFileParser.lib
src/: bindings.rs  lib.rs  mono.rs  mzml.rs  mzml_spectrum.rs  prelude.rs  streamer.rs
