[package]
name = "thermo-raw-file-streamer"
version = "0.1.0"
edition = "2021"
links = "mono-2.0"

[build-dependencies]
bindgen = "0.68.1"
#cc = "1.0.83"
fs_extra = "1.2"

[dependencies]
anyhow = "*"
lazy_static = "*"
path-absolutize = "3.1.1"
serde = { version = "1.0.190", features = [ "derive" ] }
quick-xml = { version = "0.31.0", features = [ "serialize" ] }

[lib]
name = "thermostreaming"
path = "src/lib.rs"
build = "build.rs"

#[[bin]]
#name = "thermo-streamer"
#path = "src/main.rs"
#build = "build.rs"
